--- a/src/Layout/Pages/Settings/SettingsCardLocations/SettingsCardLocations.module.css
+++ b/src/Layout/Pages/Settings/SettingsCardLocations/SettingsCardLocations.module.css
@@ -92,3 +92,18 @@
 .dropDown > .ant-dropdown-menu {
   width: 1000px !important;
 }
+
+.deleteModalWRapper {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+} 
+
+.deleteModalWRapper>div {
+  display: flex;
+  gap: 12px;
+  align-items: flex-start;
+}
